.workspace-data/cache/repo-33e59f1f5d53b03b/crates/next-custom-transforms/tests/errors/server-actions/server-graph/29/input.js
'use cache'
'use client'

export async function foo() {}
